--- a/templates/Email/shopMail.html.twig
+++ b/templates/Email/shopMail.html.twig
@@ -1,4 +1,6 @@
+{% extends 'Email/base.html.twig' %}
 
+{% block body %}
 <span class="preheader"></span>
 
 <table class="body">
@@ -81,7 +83,7 @@
                                                                                     <th>
                                                                                         <p>
                                                                                             <strong>Date des billets</strong><br>
-                                                                                            {{ order.date }}
+                                                                                            {{ order.date|date("d-m-y") }}
                                                                                         </p>
                                                                                     </th>
                                                                                 </tr>
@@ -180,3 +182,4 @@
     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 </div>
+{% endblock %}
