Phpunit testing and front modifs

--- a/templates/Email/shopMail.html.twig
+++ b/templates/Email/shopMail.html.twig
@@ -116,7 +116,7 @@
                                                         {% endfor %}
                                                         <tr>
                                                             <td colspan="2"><b>Total TTC :</b></td>
-                                                            <td>{{ order.totalPrice }}</td>
+                                                            <td>{{ order.totalPrice }} €</td>
                                                         </tr>
                                                     </table>
                                                     <hr>
