--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -24,7 +24,7 @@
         					<div class="form-group">
         						{{ form_row(form.message) }}
         					</div>
-        					<button type="submit" class="btn btn-primary">Envoyer</button>
+        					<button type="submit" value="Submit" class="btn btn-primary">Envoyer</button>
 
         			</div>
     			</div>
