--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -6,6 +6,14 @@
 
     <div class="box">
         <div class="container">
+
+            <div class="alert alert-primary" role="alert">
+                <p>Avancée du site</p>
+                <div class="progress">
+                    <div class="progress-bar bg-info" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+                </div>
+            </div>
+            <br>
             <div class="row">
 
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
@@ -19,7 +27,7 @@
                         </div>
 
                         <div class="text">
-                            <span>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</span>
+                            <span>Nos dernières photos.</span>
                         </div>
 
                         <a href="#">Learn More</a>
@@ -38,7 +46,7 @@
                         </div>
 
                         <div class="text">
-                            <span>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</span>
+                            <span>Suivez-nous ici.</span>
                         </div>
 
                         <a href="#">Learn More</a>
@@ -57,64 +65,7 @@
                         </div>
 
                         <div class="text">
-                            <span>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</span>
-                        </div>
-
-                        <a href="#">Learn More</a>
-
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-
-                    <div class="box-part text-center">
-
-                        <i class="fa fa-pinterest-p fa-3x" aria-hidden="true"></i>
-
-                        <div class="title">
-                            <h4>Pinterest</h4>
-                        </div>
-
-                        <div class="text">
-                            <span>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</span>
-                        </div>
-
-                        <a href="#">Learn More</a>
-
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-
-                    <div class="box-part text-center">
-
-                        <i class="fa fa-google-plus fa-3x" aria-hidden="true"></i>
-
-                        <div class="title">
-                            <h4>Google</h4>
-                        </div>
-
-                        <div class="text">
-                            <span>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</span>
-                        </div>
-
-                        <a href="#">Learn More</a>
-
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-
-                    <div class="box-part text-center">
-
-                        <i class="fa fa-github fa-3x" aria-hidden="true"></i>
-
-                        <div class="title">
-                            <h4>Github</h4>
-                        </div>
-
-                        <div class="text">
-                            <span>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</span>
+                            <span>En apprendre plus avec nous.</span>
                         </div>
 
                         <a href="#">Learn More</a>
