--- a/templates/mentions.html.twig
+++ b/templates/mentions.html.twig
@@ -5,7 +5,7 @@
     <body class="text-center">
 
             {#BodyContainer#}
-
+            <div class="container">
                         <div class="card text-white bg-info mb-3">
                           <div class="card-header">1 - Objet</div>
                           <div class="card-body">
@@ -279,7 +279,7 @@
                                     </p>
                             </div>
                         </div>
-
+                        </div>
         </div>
     </body>
 {% endblock %}
