--- a/templates/Shop/shopSuccess.html.twig
+++ b/templates/Shop/shopSuccess.html.twig
@@ -3,23 +3,17 @@
 {% block title %}La Billetterie{% endblock %}
 
 {% block body %}
-    <div class="card border-success mb-3" style="max-width: 18rem;">
-        <div class="card-header bg-transparent border-success">4eme étape - Success</div>
-        <div class="card-body text-success">
-            <div class="row">
-                <div class="col-3">
-                    <p></p>
-                    <p class="text-center"><i class="fas fa-shopping-cart fa-4x"></i></p>
-                </div>
-
-                <div class="col-9">
+    <body class="text-center">
+        <div class="container">
+            <div class="card text-white border-success">
+                <div class="card-header bg-success">Commande validée</div>
+                <div class="card-body text-success">
                     <h5 class="card-title">Félicitations !</h5>
-                    <p class="card-text">Vous allez prochainement recevoir sur {{ order.email }} un email contenant les informations liés à votre commande, à bientôt !</p>
+                    <p class="card-text">Vous allez prochainement recevoir un email contenant les informations liés à votre commande, à bientôt !</p>
+                </div>
+                <div class="mb-3">
+                    <img src="{{ asset('icon-valid.png') }}" class="img-fluid" alt="Responsive image">
                 </div>
             </div>
-        </div>
-        <div class="card-footer bg-transparent border-success">
-            <h3>Référence : <span class="badge badge-sucess">{{ order.ref }}</span></h3>
-        </div>
-    </div>
+    </body>
 {% endblock %}
