--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -16,13 +16,13 @@
         			<div class="card-block">
 
         					<div class="form-group">
-        						{{ form_row(form.username) }}
+        						{{ form_row(form.Pseudo) }}
         					</div>
         					<div class="form-group">
-        						{{ form_row(form.from) }}
+        						{{ form_row(form.Email) }}
         					</div>
         					<div class="form-group">
-        						{{ form_row(form.message) }}
+        						{{ form_row(form.Message) }}
         					</div>
         					<button type="submit" value="Submit" class="btn btn-primary">Envoyer</button>
 
