Phpunit testing(totalprice, validators), SuccessOrder

--- a/templates/Shop/shopSuccess.html.twig
+++ b/templates/Shop/shopSuccess.html.twig
@@ -6,14 +6,16 @@
     <body class="text-center">
         <div class="container">
             <div class="card text-white border-success">
-                <div class="card-header bg-success">Commande validée</div>
+                <div class="card-header bg-success">Félicitations {{ order.email }} !</div>
                 <div class="card-body text-success">
-                    <h5 class="card-title">Félicitations !</h5>
-                    <p class="card-text">Vous allez prochainement recevoir un email contenant les informations liés à votre commande, à bientôt !</p>
-                </div>
-                <div class="mb-3">
-                    <img src="{{ asset('icon-valid.png') }}" class="img-fluid" alt="Responsive image">
+                    <h5 class="card-title">Votre commande {{ order.ref }} d'un montant de {{ order.totalPrice }}€ a été validée :)</h5>
+                    <p class="card-text">Vous allez prochainement recevoir un email contenant les informations liés à votre commande.</p>
+                    <div class="mb-3">
+                        <img src="{{ asset('icon-valid.png') }}" class="img-fluid" alt="Responsive image">
+                    </div>
+                    <p>À bientôt !</p>
                 </div>
             </div>
+        </div>
     </body>
 {% endblock %}
