Phpunit testing(workflow 3/4), SuccessOrder

--- a/templates/Shop/shop.html.twig
+++ b/templates/Shop/shop.html.twig
@@ -13,8 +13,9 @@
             <ul class="list-group">
                 <li class="list-group-item list-group-item-info text-left">Tout les champs doivent être rempli.</li>
                 <li class="list-group-item list-group-item-info text-left">Un maximum de 10 billets par commande est autorisé, veuillez passer par le formulaire de contact pour plus de renseignements.</li>
+                <li class="list-group-item list-group-item-info text-left">Un maximum de 1000 billets par jour peuvent être vendus.</li>
                 <li class="list-group-item list-group-item-info text-left">Il n'est pas possible de commander un billet "Journée" pour le jour même une fois 14h00(UTC+1) passé.</li>
-                <li class="list-group-item list-group-item-info text-left">Le musée est fermer les Mardi et Dimanches ainsi que les jours fériés suivants : <br><br>
+                <li class="list-group-item list-group-item-info text-left">Le musée est fermé les Mardi et Dimanches ainsi que les jours fériés suivants : <br>
                     1er janvier<br>
                     Fête du travail<br>
                     Victoire des alliés<br>
@@ -34,7 +35,7 @@
         <div class="container">
             <div class="card">
                 <div class="card-header">
-                    La Billèterie
+                    La Billeterie
                 </div>
                 <div class="card-block">
 
