--- a/templates/Email/shopMail.html.twig
+++ b/templates/Email/shopMail.html.twig
@@ -107,10 +107,10 @@
                                                         </tr>
                                                         {% for ticket in order.tickets %}
                                                             <tr>
-                                                                <td>{{ ticket.firstName }} {{ ticket.lastName }}</td>
-                                                                <td>{{ ticket.country }}</td>
-                                                                <td>{{ ticket.birthday|date("d-m-y") }}</td>
-                                                                <td>{{ ticket.reduce }}</td>
+                                                                <td>{{ ticket.prenom }} {{ ticket.nom }}</td>
+                                                                <td>{{ ticket.pays }}</td>
+                                                                <td>{{ ticket.anniversaire|date("d-m-y") }}</td>
+                                                                <td>{{ ticket.reduction }}</td>
                                                                 <td>{{ ticket.price }} €</td>
                                                             </tr>
                                                         {% endfor %}
