--- a/templates/Shop/shopTicket.html.twig
+++ b/templates/Shop/shopTicket.html.twig
@@ -9,7 +9,7 @@
         <div class="container">
             <div class="card">
                 <div class="card-header">
-                    2eme étape
+                    2eme étape - Tickets
                 </div>
                 <div class="card-block">
 
