END of the Project

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -8,10 +8,7 @@
         <div class="container">
 
             <div class="alert alert-primary" role="alert">
-                <p>Avancée du site</p>
-                <div class="progress">
-                    <div class="progress-bar bg-info" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
-                </div>
+                <p>Bienvenue sur la billetterie en ligne du musée :)</p>
             </div>
             <br>
             <div class="row">
@@ -30,7 +27,7 @@
                             <span>Nos dernières photos.</span>
                         </div>
 
-                        <a href="#">Learn More</a>
+                        <a href="#">En lire plus</a>
 
                     </div>
                 </div>
@@ -49,7 +46,7 @@
                             <span>Suivez-nous ici.</span>
                         </div>
 
-                        <a href="#">Learn More</a>
+                        <a href="#">En lire plus</a>
 
                     </div>
                 </div>
@@ -68,7 +65,7 @@
                             <span>En apprendre plus avec nous.</span>
                         </div>
 
-                        <a href="#">Learn More</a>
+                        <a href="#">En lire plus</a>
 
                     </div>
                 </div>
