--- a/templates/Shop/shop.html.twig
+++ b/templates/Shop/shop.html.twig
@@ -11,11 +11,11 @@
             </button>
             <hr>
             <ul class="list-group">
-                <li class="list-group-item list-group-item-info text-left">Tout les champs doivent être rempli.</li>
+                <li class="list-group-item list-group-item-info text-left">Tous les champs doivent être remplis.</li>
                 <li class="list-group-item list-group-item-info text-left">Un maximum de 10 billets par commande est autorisé, veuillez passer par le formulaire de contact pour plus de renseignements.</li>
                 <li class="list-group-item list-group-item-info text-left">Un maximum de 1000 billets par jour peuvent être vendus.</li>
                 <li class="list-group-item list-group-item-info text-left">Il n'est pas possible de commander un billet "Journée" pour le jour même une fois 14h00(UTC+1) passé.</li>
-                <li class="list-group-item list-group-item-info text-left">Le musée est fermé les Mardi et Dimanches ainsi que les jours fériés suivants : <br>
+                <li class="list-group-item list-group-item-info text-left">Le musée est fermé les Mardi et Dimanche ainsi que les jours fériés suivants : <br>
                     1er janvier<br>
                     Fête du travail<br>
                     Victoire des alliés<br>
