--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -24,6 +24,9 @@
         					<div class="form-group">
         						{{ form_row(form.Message) }}
         					</div>
+							<div class="form-group">
+								{{ form_row(form.rgpd) }}
+							</div>
         					<button type="submit" value="Submit" class="btn btn-primary">Envoyer</button>
 
         			</div>
